[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "w3ext"
authors = [
    {name = "cheewba", email = "chewba34@gmail.com"},
]
description = "Extended version of web3py"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "web3==6.0.0",
    'aiohttp~=3.8.4',
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "w3ext.__version__"}